<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailActivity"
        android:padding="@dimen/margin_default"
        android:orientation="vertical">
    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:id="@+id/tvDetailNamePlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    tools:text="Ini Nama Tempat"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            <ImageView
                    android:id="@+id/imgDetailPlace"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="@dimen/margin_default"
                    android:src="@mipmap/ic_launcher_round"
                    android:scaleType="fitXY"
                    app:layout_constraintTop_toBottomOf="@id/tvDetailNamePlace"/>
            <LinearLayout
                    android:id="@+id/llPriceDistrict"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/imgDetailPlace">
                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.2"
                        android:layout_height="wrap_content"
                        android:text="@string/harga"
                        android:textStyle="bold"/>
                <TextView
                        android:id="@+id/tvPriceDetailPlace"
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:layout_height="wrap_content"
                        tools:text="Rp. 12.000,00"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.2"
                        android:layout_height="wrap_content"
                        android:text="@string/kecamatan"
                        android:textStyle="bold"/>
                <TextView
                        android:id="@+id/tvDistrictDetailPlace"
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:layout_height="wrap_content"
                        tools:text="Bogor Tengah"/>
            </LinearLayout>
            <TextView
                    android:id="@+id/tvTitleTlp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:text="@string/nomor_telepon"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/llPriceDistrict"
            />
            <TextView
                    android:id="@+id/tvTlpDetailPlace"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginLeft="@dimen/margin_default"
                    app:layout_constraintLeft_toRightOf="@id/tvTitleTlp"
                    app:layout_constraintTop_toBottomOf="@id/llPriceDistrict"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:text="(0263) 581617"/>
            <TextView
                    android:id="@+id/tvTitleAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margin_default"
                    app:layout_constraintTop_toBottomOf="@id/tvTitleTlp"/>
            <TextView
                    android:id="@+id/tvAddressDetailPlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvTitleAddress"
                    tools:text="Jl. Mariwati No.KM, 7, Kawungluwuk, Sukaresmi, Kabupaten Cianjur, Jawa Barat 43254"/>
            <TextView
                    android:id="@+id/tvTitleOperationalTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jam_operational"
                    android:textStyle="bold"
                    android:layout_marginTop="14dp"
                    app:layout_constraintTop_toBottomOf="@id/tvAddressDetailPlace"
                    app:layout_constraintLeft_toLeftOf="parent"/>
            <Spinner
                    android:id="@+id/spOperationalTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@id/tvTitleOperationalTime"
                    app:layout_constraintTop_toBottomOf="@id/tvAddressDetailPlace"
                    app:layout_constraintRight_toRightOf="parent"/>
            <TextView
                    android:id="@+id/tvTitleDescPlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deskripsi"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/margin_default"
                    app:layout_constraintTop_toBottomOf="@id/tvTitleOperationalTime"/>
            <TextView
                    android:id="@+id/tvDescDetailPlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvTitleDescPlace"
                    tools:text="Taman Bunga Nusantara adalah sebuah taman bunga seluas 35 hektare yang terletak dekat Gunung Gede Pangrango dan Kebun Teh Bogor dengan jarak tempuh sekitar 2,5 - 3 jam perjalanan dari Jakarta."/>
            <Button
                    android:id="@+id/btnShowMap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lihat_map"
                    android:layout_marginTop="@dimen/margin_default"
                    style="@style/Widget.AppCompat.Button.Colored"
                    app:layout_constraintTop_toBottomOf="@id/tvDescDetailPlace"
            />
            <Button
                    android:id="@+id/btnGetTicket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/beli_tiket"
                    style="@style/Widget.AppCompat.Button.Colored"
                    app:layout_constraintTop_toBottomOf="@id/btnShowMap"
            />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>